--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <tr><td>
     <div class="g-recaptcha" data-sitekey="6LeKuyUqAAAAACc-HGZI_uLd4ZQa4YU2rW3uDK9m"></div>
   <input type="submit" name="Logidddn" value="Login" class="button_add"></td></tr>
+
+  <button class="g-recaptcha" 
+        data-sitekey="6LeKuyUqAAAAACc-HGZI_uLd4ZQa4YU2rW3uDK9m" 
+        data-callback='onSubmit' 
+        data-action='submit'>Submit</button>
   </br>
   
   </table>
