--- a/index.html
+++ b/index.html
@@ -28,4 +28,9 @@
   </table>
     </form>
 </body>
+    <script>
+   function onSubmit(token) {
+     document.getElementById("demo-form").submit();
+   }
+ </script>
 </html>
