--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <tr><td width="100px"><font style="font-family:Verdana;font-size:15px" >User Name</font></td><td><input type="text" name="username" value="" autocomplete="off"></td></tr>
   <tr><td><font style="font-family:Verdana;font-size:15px" >Password</font></td><td><input type="password" name="password" value="" autocomplete="off"></td></tr>
   <tr><td>
-    <div class="g-recaptcha" data-sitekey="6LeKuyUqAAAAACc-HGZI_uLd4ZQa4YU2rW3uDK9m"></div>
+    <div class="g-recaptcha" data-sitekey="6LdXzCUqAAAAABUol5ie7_Ti1NqD_4XvnMYdLODb"></div>
   <input type="submit" name="Logidddn" value="Login" class="button_add"></td></tr>
 
   <button class="g-recaptcha" 
-        data-sitekey="6LeKuyUqAAAAACc-HGZI_uLd4ZQa4YU2rW3uDK9m" 
+        data-sitekey="6LdXzCUqAAAAABUol5ie7_Ti1NqD_4XvnMYdLODb" 
         data-callback='onSubmit' 
         data-action='submit'>Submit</button>
   </br>
@@ -30,7 +30,7 @@
 </body>
     <script>
    function onSubmit(token) {
-     document.getElementById("demo-form").submit();
+     document.getElementById("operationname").submit();
    }
  </script>
 </html>
