--- a/index.html
+++ b/index.html
@@ -17,20 +17,35 @@
   <tr><td><font style="font-family:Verdana;font-size:15px" >Password</font></td><td><input type="password" name="password" value="" autocomplete="off"></td></tr>
   <tr><td>
     <div class="g-recaptcha" data-sitekey="6LdXzCUqAAAAABUol5ie7_Ti1NqD_4XvnMYdLODb"></div>
+      </br>
   <input type="submit" name="Logidddn" value="Login" class="button_add"></td></tr>
 
-  <button class="g-recaptcha" 
-        data-sitekey="6LdXzCUqAAAAABUol5ie7_Ti1NqD_4XvnMYdLODb" 
-        data-callback='onSubmit' 
-        data-action='submit'>Submit</button>
   </br>
   
   </table>
     </form>
 </body>
-    <script>
-   function onSubmit(token) {
-     document.getElementById("operationname").submit();
-   }
- </script>
+    
+</html>
+<html>
+  <head>
+    <title>reCAPTCHA demo: Explicit render after an onload callback</title>
+    <script type="text/javascript">
+      var onloadCallback = function() {
+        grecaptcha.render('html_element', {
+          'sitekey' : '6LdXzCUqAAAAABUol5ie7_Ti1NqD_4XvnMYdLODb'
+        });
+      };
+    </script>
+  </head>
+  <body>
+    <form action="?" method="POST">
+      <div id="html_element"></div>
+      <br>
+      <input type="submit" value="Submit">
+    </form>
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+        async defer>
+    </script>
+  </body>
 </html>
